<resources>
    <string name="app_name">WorldCinema</string>

    //Title.
    <string name="world_cinema">WorldCinema</string>
    <string name="capitan_marvel">Capitan Marvel</string>
    <string name="collections">Collections</string>
    <string name="create_collection">Create Collection</string>

    //Titles bottom navigation menu.
    <string name="title_main">Main</string>
    <string name="title_selection">Selections</string>
    <string name="title_collections">Collections</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_main2">MainActivity2</string>

    //TextView.
    <string name="collection_name">Collection Name</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="discussions">Discussions</string>
    <string name="discussionname">Discussion Name</string>
    <string name="message">Message</string>

    //EditText.
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Confirm Password</string>
    <string name="write_message">Write Message...</string>

    //Button.
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="registration">Registration</string>
    <string name="already_have_account">I have an account</string>
    <string name="change_icon">Change icon</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>

    //Toast.
    <string name="empty_field">Empty filed</string>
    <string name="password_not_match">Password not match</string>
    <string name="only_letters">Only Letters</string>
    <string name="title_long">The Title is too long</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="such_mail_is_already_registered">Such mail is already registered</string>
    <string name="invalid_input">Invalid input</string>
    <string name="only_contain_letters">The Name and The Lastname can only contain letters</string>
    <string name="name_too_short">The Name too short</string>
    <string name="name_too_long">The Name too long</string>
    <string name="lastname_too_long">The Lastname too long</string>
    <string name="incorrect_email">Incorrect E-mail</string>
    <string name="check_password">The password no less than 8 and no more than 20 characters</string>
    <string name="would_you_like">Would you like to register?</string>
    <string name="yes">Yes I want to</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="coming_soon">Coming soon!</string>

    //Menu.
    <string-array name="itemsoption">
        <item>Change</item>
        <item>Remove</item>
        <item>Cancel</item>
    </string-array>
</resources>